syntax = "proto3";

option go_package="garination.com/db/sdk/proto";
import "model.proto";

message InsertUserMetaRequest {
  UserMetum user_meta = 1;
}


message InsertDealershipRequest {
  Dealership dealership = 1;
}

message InsertUserMetaResponse {
  UserMetum user_meta = 1;
}

message UpdateUserMetaRequest {
  UserMetum user_meta = 1;
}


message GetUserDealershipRequest {
  string user_id = 1;
}


message UpdateDealershipRequest {
  Dealership dealership = 1;
}

message DeleteDealershipRequest {
  string dealership_id = 1;
}

message GetDealershipByIDRequest {
  string dealership_id = 1;
}
